# NonsenseGenerator

./: CMakeLists.txt
NonsenseGenerator/: .gitignore  CMakeLists.txt
NonsenseGenerator/src/: main.cpp
NonsenseGenerator/src/CFunction/: Func.cpp  Func.h
NonsenseGenerator/src/EnhanAddon/: EnhanAccess.cpp  EnhanAccess.h  EnhanWords.h
NonsenseGenerator/src/Export/: Purser.cpp  Purser.h  ReadLexicon.cpp  ReadLexicon.h
NonsenseGenerator/src/Imported/: ExtractAgent.hpp  FinalLib.hpp  Sentence.hpp  Word.hpp  WriteLexicon.cpp  WriteLexicon.h
NonsenseGenerator/src/Imported/Word/: Interface.hpp  Lib.h  Word.hpp
NonsenseGenerator/src/Interpreter/: EnhanAddon.cpp  EnhanAddon.h
NonsenseGenerator/src/WordFactory/: WordFac.cpp  WordFac.h  WordFactory.cpp  WordFactory.h  WordLib.h
src/: Headers.h  main.cpp
src/Decorator/: Decorator.h
src/Factory/: WordFac.cpp  WordFac.h  WordFactory.cpp  WordFactory.h  WordLib.h
